[package]
name = "uplink-ssh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
russh = "0.56.0"
russh-keys = "0.49.2"
russh-sftp = "2.0.4"
ssh-key = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

[build-dependencies]
napi-build = "2"